Fix memory leak in ev_sidebar_thumbnails_document_changed_cb()

Clear the loading icon hash table if it already exists.

https://bugzilla.gnome.org/show_bug.cgi?id=770070